<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <include layout="@layout/title_bar_transparent_black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/main_header_bg">

        <View
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_centerInParent="true"
            android:background="@drawable/main_ring" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/current_step"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/step" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/current_step"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/current_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_step"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/target_step"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/target_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F7F7F7"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:src="@drawable/heart_rate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="7.5dp"
            android:text="@string/heart_rate"
            android:textColor="#171716"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/last_heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55.5dp"
            android:textColor="#4A4A4A"
            android:textSize="29sp" />

        <TextView
            android:id="@+id/heart_rate_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/last_heart_rate"
            android:text="@string/heart_rate_unit"
            android:textColor="#171616"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/last_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:layout_marginTop="18.5dp"
            android:text="@string/last_measure"
            android:textColor="#9B9B9B"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/last_heart_rate_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/last_measure"
            android:layout_marginRight="17dp"
            android:layout_marginTop="4dp"
            android:textColor="#9B9B9B"
            android:textSize="12sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F7F7F7"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:src="@drawable/scene" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="7.5dp"
            android:text="@string/scene"
            android:textColor="#171716"
            android:textSize="12sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/edit_scene_layer"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/edit_scene_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="13dp"
            android:text="@string/scene_edit"
            android:textColor="#1A1A1C"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_scene_tv"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="6dp"
            android:text="@string/scene_need_gateway"
            android:textColor="#777777"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="#E2E2E2" />

    <RelativeLayout
        android:id="@+id/add_scene_layer"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/scene_add_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="13dp"
            android:text="@string/scene_add"
            android:textColor="#1A1A1C"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scene_add_tv"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="6dp"
            android:text="@string/scene_need_gateway"
            android:textColor="#777777"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:src="@drawable/add" />
    </RelativeLayout>

</LinearLayout>